# cassinoDC

./: Cargo.toml  readme.md
src/: db.rs  main.rs  model.rs
src/commands/: adm.rs  impar_par.rs  math.rs  mod.rs  par_ou_impar.rs  profile.rs  rec.rs  teste.rs
src/events/: mod.rs  ready.rs
