[package]
name = "cassino_dc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"

[dependencies.tokio]
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]