[package]
name = "cassino_dc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = "1.0.203"
tracing = "0.1.23"
tracing-subscriber = "0.3"

[dependencies.tokio]
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
